# flutter_mapbox_navigation

./: CHANGELOG.md  check_16kb_compatibility.sh  check_elf_alignmen.sh  pubspec.yaml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/eopeter/fluttermapboxnavigation/: TurnByTurn.kt
android/src/main/kotlin/com/eopeter/fluttermapboxnavigation/activity/: NavigationActivity.kt
android/src/main/kotlin/com/eopeter/fluttermapboxnavigation/factory/: EmbeddedNavigationViewFactory.kt
android/src/main/kotlin/com/eopeter/fluttermapboxnavigation/models/views/: EmbeddedNavigationMapView.kt
android/src/main/res/values/: strings.xml
example/android/: build.gradle  gradle.properties
example/android/app/: build.gradle
lib/src/: flutter_mapbox_navigation.dart  flutter_mapbox_navigation_method_channel.dart
